# unPass

./: .env.example  LICENSE  README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
app/: app.vue  spa-loading-template.html
app/assets/css/: fonts.css  main.css
app/assets/css/daisyui/: dark.css  index.css  light.css
app/assets/css/tailwind/: animate.css  fonts.css
app/assets/css/vue/: transition.css
app/components/account/card/: card.vue  favicon.vue  header.vue  item.vue
app/components/app/: navbar.vue  theme-switcher.vue
app/components/auth/form/: password.vue  username.vue
app/components/pages/account/: card.vue
app/components/pages/account/header/: favicon.vue  index.vue
app/components/pages/account/item/: index.vue
app/components/pages/card/: card.vue
app/components/pages/card/header/: favicon.vue  index.vue
app/components/pages/card/item/: detail.vue  index.vue  main.vue
app/components/tauri/: link.vue  titlebar-control.vue  titlebar.vue
app/components/ui/: dropdown.vue  tooltip.vue
app/composables/: fuse.ts  idb.ts  use-auth.ts  use-dark.ts  use-data.ts  use-tauri-icon.ts
app/layouts/: app.vue
app/middleware/: auth.global.ts
app/pages/: index.vue
app/pages/app/: accounts.vue  card.vue  index.vue  settings.vue  sign-in.vue
app/plugins/: 01.is-tauri.ts
app/src/constants/: data.ts  key.ts
app/src/routing/: index.ts
app/types/: account.ts  auth.ts  card.ts  data.ts  index.ts  type-guards.ts
app/types/guards/: data.ts  user.ts
app/utils/: hashing.ts  slugGenerator.ts  transformDomain.ts
public/pwa/: app.webmanifest
scripts/: _postinstall.ts  _prebuild.ts  set-version.ts  use-env-key.ts  useEnvKey.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
