[package]
name = "unPass"
version = "0.1.0"
description = "A Tauri App"
authors = ["milley"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tao = {version = "0.34.4", features = []}
wry = {version = "0.53.4", features = []}